--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Andrew Buccilli"
   avatar           : "andrew.jpg"
-  bio              : "Physics PhD at University of Alabama"
-  location         : "Atlanta, GA, USA"
+  bio              : "Physics PhD"
+  location         : "San Francisco Bay Area"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=J-jMK_IAAAAJ&hl=en&authuser=1"
